fixed about spacing

--- a/app/about/content.less
+++ b/app/about/content.less
@@ -1,5 +1,5 @@
 .main {
-  height: 100%;
+//  height: 100%;
   padding: 5em 10em 0 10em;
   text-align: center;
   background-color: #99FFCC;
